--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "dev:tailwind": "npx tailwindcss -i ./input.css -o ./assets/css/styles.css --watch",
-    "dev:go": "air -c ./.air.toml",
+    "dev:go": "air -c ./air.toml",
     "dev": "concurrently \"npm run dev:tailwind\" \"npm run dev:go\""
   },
   "devDependencies": {
