--- a/air.toml
+++ b/air.toml
@@ -3,7 +3,7 @@ tmp_dir = "tmp"
 
 [build]
   bin = "./tmp/main"
-  cmd = "templ generate && go build -o ./tmp/main ./cmd/main.go"
+  cmd = "TEMPL_EXPERIMENT=rawgo templ generate && go build -o ./tmp/main ./cmd/main.go"
   delay = 1000
   exclude_dir = ["tmp", "vendor","node_modules"]
   exclude_file = []
@@ -12,7 +12,7 @@ tmp_dir = "tmp"
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "templ", "html"]
+  include_ext = ["go", "tpl", "tmpl", "templ", "html", "js", "css"]
   kill_delay = "0s"
   log = "build-errors.log"
   send_interrupt = false
